🐛 Fixed bug ab. details not scrollable on mobile

--- a/components/SkillsSection.module.css
+++ b/components/SkillsSection.module.css
@@ -35,4 +35,8 @@
     "c"
     "b";
   }
+  .detailsContent {
+  max-height: initial;
+  overflow-y: scroll;
+}
 }
